--- a/springbootDemo/src/main/resources/application.properties
+++ b/springbootDemo/src/main/resources/application.properties
@@ -4,5 +4,13 @@ server.port=8888
 #server.servlet.encoding.charset=GBK
 
 
-mycar.brand=\u5C0F\u9E4Fp7
+
+#debug=true
+
+spring.banner.image.location=dog.jpg
+
+mycar.brand=byd
 mycar.price=300000
+
+
+
