静态资源的处理

--- a/springbootDemo/src/main/resources/application.properties
+++ b/springbootDemo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8888
+#server.port=8888
 
 #server.servlet.encoding.charset=GBK
 
@@ -11,6 +11,9 @@ spring.banner.image.location=dog.jpg
 
 mycar.brand=byd
 mycar.price=300000
+
+
+
 
 
 
