--- a/springbootDemo/pom.xml
+++ b/springbootDemo/pom.xml
@@ -51,7 +51,12 @@
             <optional>true</optional>
         </dependency>
 
-
+        <!--webjar jquery-->
+        <dependency>
+            <groupId>org.webjars</groupId>
+            <artifactId>jquery</artifactId>
+            <version>3.5.1</version>
+        </dependency>
     </dependencies>
 
     <build>
