--- a/springbootDemo/src/main/resources/application.yml
+++ b/springbootDemo/src/main/resources/application.yml
@@ -60,5 +60,6 @@ spring:
     hiddenmethod:
       filter:
         enabled: true # 开启页面表单的Rest功能，前后端分离，就不用开启了，
-
+    contentnegotiation:
+      favor-parameter: true # 开启参数协调协商模式
 
